avoiding overflow

--- a/src/components/Testimonials/testimonials.scss
+++ b/src/components/Testimonials/testimonials.scss
@@ -81,6 +81,7 @@
 
             .bottom {
                 text-align: center;
+                overflow: hidden;
                 @include mobile {
                     font-size: 12px;
                     text-align: center;
